# rgbpad

./: .gitignore  CMakeLists.txt  README.md  clean.sh  flash.sh  prepare.sh  release.sh  upload.sh
lib/graphics/: CMakeLists.txt  Pixel.cpp  Pixel.h  Screen.cpp  Screen.h
src/: main.cpp  main.cpp.bak
